Unrelated to Create: Fixed styling in All so that long posts don't go off screen

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section { 
 body { 
   line-height: 1; 
   font-family: Tahoma, Geneva, sans-serif;
-
+  width: 100vw;
 }
 ol,ul { list-style: none;}
 blockquote,q { quotes: none;}
@@ -16,6 +16,7 @@ table { border-collapse: collapse; border-spacing: 0;}
   align-items: center;
   min-height: 100vh; /* This is the default height */
   height: auto; /* If the Main part grows bigger than the window, grow :) */
+  width: 100vw;
 
   justify-content: space-between;
 }
