--- a/src/components/Main/All/All.css
+++ b/src/components/Main/All/All.css
@@ -1,5 +1,10 @@
 .all-posts-page {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.post-list {
+    width: 100%;
 }
